set(TARGET_NAME Tsugaru_CUI)

add_executable(Tsugaru_CUI MACOSX_BUNDLE main.cpp)
target_link_libraries(${TARGET_NAME} 
	towns 
	townscommand 
	townsargv
	townsrender 
	outside_world
	fssimplewindow_connection
)

add_subdirectory(command)
add_subdirectory(argv)

add_test(
 	NAME CPUTEST
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/CPUTESTU.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2MX_V21L30
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset01.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L30
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset01.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L20
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset02.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L20
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset02.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_DOSCOMMANDS
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset03.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_DOSCOMMANDS
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testset03.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_CDROM_ISO_V21L20
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testcdV2.1L20.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CD
		"${CMAKE_SOURCE_DIR}/../testdata/ISOIMG/TESTDISC.iso"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_CDROM_ISO_V21L30
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/testcdV2.1L30.bin"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CD
		"${CMAKE_SOURCE_DIR}/../testdata/ISOIMG/TESTDISC.iso"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V11L10_GUI
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV1.1L10.iso"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V11L10TEST.txt"
		-UNITTEST
		-FREQ
		20
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2F_V11L30_GUI
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV1.1L30.iso"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V11L30TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L20_GUI
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V21L20TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L31_GUI
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV2.1L31.iso"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V21L31TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L20_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CMOS
		"${CMAKE_SOURCE_DIR}/../testdata/CMOS_HD0.BIN"
		-HD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/V21L20HDD_MIN.bin"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V21L20_HDDBOOT.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-LOWRES
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L20_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-SYM
		"${CMAKE_SOURCE_DIR}/../symtables/UNITTEST.txt"
		-CMOS
		"${CMAKE_SOURCE_DIR}/../testdata/CMOS_HD0.BIN"
		-HD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/V21L20HDD_MIN.bin"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/V21L20_HDDBOOT.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-LOWRES
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L51_ON_DOS6_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CMOS
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/CMOS_DOS6.BIN"
		-HD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/DOS6_TOS.HDI"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/DOS6_TOS.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME AFTERBURNER2_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/AFTER_BURNER.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00007237
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME TOWNS_ILLUSION
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV1.1L10.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/TownsIllusion.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00003CE4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME GALAXY_FORCE2_TITLE
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/GALAXY_FORCE2.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00002604
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME RAYXANBER_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/RAYXANBER.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000009C9
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME TURBO_OUTRUN_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TURBO.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000197D
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME VIEWPOINT_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/VIEWPOINT.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0017A367
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME CHASEHQ_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/CHASEHQ.CUE"
		-NOCATCHUPREALTIME
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:001A4495
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME AIRCOMBAT2_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/AIRCOMBAT2_SPCIAL.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0008A1B4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME ATRAIN3_OPENING
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ARTDINK_A3.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000263B
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME F29_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/F29Retaliator.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/f29autodemo.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		0044:00001077
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME PANZER_DIVISION_OPENING
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ARTDINK_TANK.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000000FB
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME SUPER_DAISEN_INTRO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${DISC_IMAGE_DIR}/SuperDaisen_1.bin"
		-FD0WP
		-FD1
		"${DISC_IMAGE_DIR}/SuperDaisen_2.bin"
		-FD1WP
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00018E7D
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME LIBBLE_RABBLE_BOOT
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/LibbleRabble.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000D8F7
		-DONTAUTOSAVECMOS
)

add_test(
	NAME STRIKE_COMMANDER_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/STCM.ISO"
		-HD0
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/DISKIMG/hddimage.bin"
		-CMOS
		"${CMAKE_SOURCE_DIR}/../testdata/CMOS_HD0.BIN"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000717BA
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME SHADOW_OF_THE_BEAST_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/SHADOWOFTHEBEAST.cue"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:001637B4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME BRANDISH_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-FD0
		"${DISC_IMAGE_DIR}/BRANDISH1.d77"
		-FD0WP
		-FD1
		"${DISC_IMAGE_DIR}/BRANDISH2.d77"
		-FD1WP
		-PRETEND386DX
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		4000:0000E218
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME ADVANTAGE_TENNIS_BOOT
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ADVANTAGETENNIS.cue"
		-PRETEND386DX
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00016D21
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME WINGCOMMANDER1_OPENING
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/WINGCOMMANDER1.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/wc1start.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0009C509
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME MEGAMORPH_OPENING
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/MEGAMORPH.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/1min_then_padAbutton.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00015181
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME MICROCOSM_OPENING
	COMMAND
		${TARGET_NAME}
		"${CMAKE_SOURCE_DIR}/../../TOWNSEMU_TEST/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/MICROCOSM.cue"
		-EVTLOG
		"${CMAKE_SOURCE_DIR}/../testdata/eventLog/microcosm.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00016AC6
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)
