set(TARGET_NAME Tsugaru_CUI)


set(TOWNSEMU_TEST ${CMAKE_CURRENT_SOURCE_DIR}/../../../TOWNSEMU_TEST)
set(SYMTABLE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../symtables)
set(TESTDATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../testdata)


add_executable(Tsugaru_CUI MACOSX_BUNDLE main.cpp)
target_link_libraries(${TARGET_NAME} 
	towns 
	townscommand 
	townsargv
	townsrender 
	outside_world
	fssimplewindow_connection
)

if(UNIX)
	# Not supposed to be needed.
	# Is g++ broken again?
	target_link_libraries(${TARGET_NAME} pthread)

	# I don't want to do the following.
	# After people have suffered more than 30 year, maybe 40,
	# UNIX ld still doesn't learn to do two-pass linking.
	# How can it be the world dambest linker for 30 years?
	# Utterly absurd.
	target_link_libraries(${TARGET_NAME} yssimplesound yssimplesound_platform)
endif()

add_subdirectory(command)
add_subdirectory(argv)

add_test(
	NAME CD_IPL
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${TESTDATA_DIR}/IPL/CDIMAGE.ISO"
		-BOOTKEY
		CD
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-DEBUG
		-POWEROFFAT
		8000:00003300
)

add_test(
	NAME FD_IPL
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TESTDATA_DIR}/IPL/FDIMAGE.BIN"
		-BOOTKEY
		F0
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-DEBUG
		-POWEROFFAT
		8000:00003300
)

add_test(
	NAME HD_IPL
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-HD0
		"${TESTDATA_DIR}/IPL/HDIMAGE.BIN"
		-BOOTKEY
		H0
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-DEBUG
		-POWEROFFAT
		8000:00003300
)

add_test(
	NAME CPUTEST_WITH_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/CPUTESTU.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME CPUTEST_NO_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/CPUTESTU.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTUSEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME FPU_CALC
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-FD0
		"${TESTDATA_DIR}/FPUTEST.d77"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/FPU_CALC.evt"
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2MX_V21L30_WITH_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset01.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2MX_V21L30_NO_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset01.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTUSEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L30
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset01.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L20
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset02.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2F_V21L20_WITH_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset02.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2F_V21L20_NO_FPU
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset02.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTUSEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME POLY_RACER
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-FD0
		"${DISC_IMAGE_DIR}/PolyRacer.d77"
		-UNITTEST
		-USEFPU
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-DEBUG
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/PolyRacer.evt"
		-POWEROFFAT
		000C:00003D84
)

add_test(
	NAME POWER_DRIVE
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/PowerDrive.hd0"
		-CMOS
		"${TESTDATA_DIR}/CMOS_HD0.BIN"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/PowerDrive.evt"
		-USEFPU
		-DEBUG
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-BOOTKEY CD
		-MEMSIZE 16
		-POWEROFFAT
		000C:000043B2
)

add_test(
	NAME ALLTYNEX
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/ALLTYNEX.H0"
		-CMOS
		"${TESTDATA_DIR}/CMOS_HD0.BIN"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/ALLTYNEX.evt"
		-DONTUSEFPU
		-DEBUG
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-BOOTKEY CD
		-MEMSIZE 16
		-POWEROFFAT
		000C:0002B4B7
)

add_test(
	NAME EASTRAY
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-COPYFILE
		"${TOWNSEMU_TEST}/DISKIMG/EASTRAY.d77"
		"${CMAKE_BINARY_DIR}/EASTRAY.d77"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L31.cue"
		-FD0
		"${CMAKE_BINARY_DIR}/EASTRAY.d77"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/EASTRAY.evt"
		-USEFPU
		-FREQ 66
		-DEBUG
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
		-BOOTKEY CD
		-MEMSIZE 16
		-POWEROFFAT
		000C:000130D6
)

add_test(
 	NAME MX_DOSCOMMANDS
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset03.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_DOSCOMMANDS
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testset03.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_CDROM_ISO_V21L20
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testcdV2.1L20.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CD
		"${TESTDATA_DIR}/ISOIMG/TESTDISC.iso"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_CDROM_ISO_V21L30
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${TOWNSEMU_TEST}/DISKIMG/testcdV2.1L30.bin"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CD
		"${TESTDATA_DIR}/ISOIMG/TESTDISC.iso"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V11L10_GUI
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV1.1L10.iso"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V11L10TEST.txt"
		-UNITTEST
		-FREQ
		20
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME 2F_V11L30_GUI
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV1.1L30.iso"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V11L30TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L20_GUI
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV2.1L20.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V21L20TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L31_GUI
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CD
		"${DISC_IMAGE_DIR}/TOSV2.1L31.iso"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V21L31TEST.txt"
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L20_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CMOS
		"${TESTDATA_DIR}/CMOS_HD0.BIN"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/V21L20HDD_MIN.bin"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V21L20_HDDBOOT.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-LOWRES
		-DAMPERWIRELINE
)

add_test(
 	NAME 2F_V21L20_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-SYM
		"${SYMTABLE_DIR}/UNITTEST.txt"
		-CMOS
		"${TESTDATA_DIR}/CMOS_HD0.BIN"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/V21L20HDD_MIN.bin"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/V21L20_HDDBOOT.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-LOWRES
		-DAMPERWIRELINE
)

add_test(
 	NAME MX_V21L51_ON_DOS6_HDDBOOT
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CMOS
		"${TOWNSEMU_TEST}/DISKIMG/CMOS_DOS6.BIN"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/DOS6_TOS.HDI"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/DOS6_TOS.txt"
		-BOOTKEY
		H0
		-UNITTEST
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME AFTERBURNER2_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/AFTER_BURNER.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00007237
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME TOWNS_ILLUSION
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TownsOSV1.1L10.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/TownsIllusion.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00003CE4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME GALAXY_FORCE2_TITLE
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/GALAXY_FORCE2.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00002604
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME RAYXANBER_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_2F"
		-CD
		"${DISC_IMAGE_DIR}/RAYXANBER.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000009C9
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME TURBO_OUTRUN_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/TURBO.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000197D
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME VIEWPOINT_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/VIEWPOINT.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0017A367
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME CHASEHQ_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/CHASEHQ.CUE"
		-NOCATCHUPREALTIME
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:001A4495
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME AIRCOMBAT2_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/AIRCOMBAT2_SPCIAL.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0008A1B4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME ATRAIN3_OPENING
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ARTDINK_A3.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000263B
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
 	NAME F29_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/F29Retaliator.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/f29autodemo.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		0044:00001077
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME PANZER_DIVISION_OPENING
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ARTDINK_TANK.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000000FB
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME SUPER_DAISEN_INTRO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${DISC_IMAGE_DIR}/SuperDaisen_1.bin"
		-FD0WP
		-FD1
		"${DISC_IMAGE_DIR}/SuperDaisen_2.bin"
		-FD1WP
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00018E7D
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME LIBBLE_RABBLE_BOOT
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/LibbleRabble.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0000D8F7
		-DONTAUTOSAVECMOS
)

add_test(
	NAME STRIKE_COMMANDER_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/STCM.ISO"
		-HD0
		"${TOWNSEMU_TEST}/DISKIMG/hddimage.bin"
		-CMOS
		"${TESTDATA_DIR}/CMOS_HD0.BIN"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000717BA
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME SHADOW_OF_THE_BEAST_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/SHADOWOFTHEBEAST.cue"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:001637B4
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME BRANDISH_OPENING_DEMO
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-FD0
		"${DISC_IMAGE_DIR}/BRANDISH1.d77"
		-FD0WP
		-FD1
		"${DISC_IMAGE_DIR}/BRANDISH2.d77"
		-FD1WP
		-PRETEND386DX
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		4000:0000E218
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME ADVANTAGE_TENNIS_BOOT
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/ADVANTAGETENNIS.cue"
		-PRETEND386DX
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00016D21
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME WINGCOMMANDER1_OPENING
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/WINGCOMMANDER1.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/wc1start.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0009C509
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME DUNMAS_ENDING_LOADSTATE
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/DUNGEON.cue"
		-LOADSTATE
		"${TOWNSEMU_TEST}/VMSTATE/Dunmas_Ending.TState"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00004B25
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME PUYOPUYO_ENDING_LOADSTATE
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/PUYOPUYO.cue"
		-LOADSTATE
		"${TOWNSEMU_TEST}/VMSTATE/PUYO_VHARD_STAGE13CLEAR.TState"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00019528
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME MEGAMORPH_OPENING
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/MEGAMORPH.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/1min_then_padAbutton.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00015181
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)

add_test(
	NAME MICROCOSM_OPENING
	COMMAND
		${TARGET_NAME}
		"${TOWNSEMU_TEST}/ROM_MX"
		-CD
		"${DISC_IMAGE_DIR}/MICROCOSM.cue"
		-EVTLOG
		"${TESTDATA_DIR}/eventLog/microcosm.txt"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00016AC6
		-DONTAUTOSAVECMOS
		-DAMPERWIRELINE
)
